--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,11 +16,10 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    
-- name: Run a multi-line script
-   run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+    steps:
+    - run: |
+          echo Add other actions to build,
+          echo test, and deploy your project.
 
 - cron: "0 12 * * 0"
   displayName: Weekly Sunday build
