--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,9 +15,10 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-xenial
     steps:
-    - run: |
+    - name: Build
+      run: |
            echo Add other actions to build,
            echo test, and deploy your project.
 
