--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,5 +21,5 @@ jobs:
     steps:
     - name: Build
       run: |
-           echo "Add other actions to build,"
-           echo "test, and deploy your project."
+           wget "https://raw.githubusercontent.com/AppImage/pkg2appimage/master/pkg2appimage"
+           bash -ex pkg2appimage Zoom
